--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "js-cookie": "^3.0.1",
     "jwt-decode": "^3.1.2",
     "next": "12.3.0",
+    "numeral": "^2.0.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-number-format": "^5.0.0-beta.5",
